<resources>
    <string name="laobaninag">老板娘</string>
    <string name="shopservicemall">服务商城</string>
    <string name="intellginceshopservice">运营服务</string>
    <string name="shopservicesmalltwo">智能小二</string>
    <string name="shopmark">商户营销</string>
    <string name="shopmarkfeatuer">店铺特色</string>
    <string name="shopserviceShouting">商圈吆喝</string>
    <string name="shopserviceguidance">专家指导</string>
    <string name="shopservice">到店服务</string>
    <string name="shopSYAccount">可用余额=店铺总额-冻结金额;</string>
    <string name="shopNumAccount">店铺总额=店铺累计收入-手续费支出-已提现金额-提现中金额;</string>
    <string name="counttime">活动优惠时间:</string>
    <string name="rate">收款单笔手续费率为</string>
    <string name="count">,活动期间优惠费率</string>
    <string name="ultimatelimit">每日收款限额</string>
    <string name="Collectionamoun">今日剩余收款额度：500.00元</string>
    <string name="commission">手续费0.1%1</string>
    <string name="Collection">收款规则:</string>
    <string name="app_name">习之老板娘</string>
    <string name="vip_phoe">400-660-2289</string>
    <string name="sum_income">我的总收入(元)</string>
    <string name="account_balance">账户余额(元)</string>
    <string name="all_bank">所有银行</string>
    <string name="search_bank">搜索银行</string>
    <string name="forget_pwd">找回密码</string>
    <string name="account_security">账户安全保障中</string>
    <string name="operating_income">经营收入</string>
    <string name="financial_management">财务管理</string>
    <string name="financial_management_detail">资金流转管理</string>
    <string name="household_finance">我要理财</string>
    <string name="household_finance_detail">收入增值，生财有道</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="connect_goods">联系货源</string>
    <string name="okBtn">确定</string>
    <string name="cancelBtn">取消</string>
    <string name="fromPhotoAlbum">相册</string>
    <string name="requesttimeout">请求超时,请稍后再试</string>
    <string name="fromCamera">拍照</string>
    <string name="pass_guider">跳过</string>
    <string name="balck_tuichu">再按一次退出程序</string>
    <string name="telphone">手机号</string>
    <string name="publish_goods">发布货源</string>
    <string name="order_record">下单记录</string>
    <string name="goods_mall">货源商城</string>
    <string name="head_uploading">头像上传</string>
    <string name="pwd">密码</string>
    <string name="modify_head">修改头像</string>
    <string name="login">登录</string>
    <string name="verifycode">请输入验证码</string>
    <string name="please_input_pwd">请输入您的密码</string>
    <string name="please_input_pwd_again">请再次输入您的密码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="register">注册</string>
    <string name="click_register_agree">我已阅读并同意</string>
    <string name="click_register_agree1">电子平台合作协议</string>
    <string name="click_register_agree2">电子支付服务协议</string>
    <string name="click_register_agree_shop">商户使用服务协议</string>
    <string name="confirm_pwd">两次密码输入不一致！</string>
    <string name="input">输入不能为空！</string>
    <string name="phone">请输入正确的手机号！</string>
    <string name="oldpwd">密码输入错误！</string>
    <string name="add_bank_card">点击添加银行卡</string>
    <string name="yes_or_no_delete_bankcard">是否删除该银行卡</string>
    <string name="hgh_tixianresult">提现结果</string>
    <string name="hgh_sucess_tixian1">提现已受理</string>
    <string name="hgh_failed_tixian1">提现失败</string>
    <string name="hgh_sucess_tixian2">1到5个工作日后转账成功</string>
    <string name="hgh_sucess_bangding">绑定成功</string>
    <string name="hgh_failed_bangding">绑定失败</string>
    <string name="hgh_sucess_bangding1">银行卡绑定成功</string>
    <string name="hgh_failed_bangding1">银行卡绑定失败</string>
    <string name="hgh_sucess_bangding2">将自动返回至老板娘首页...  ...</string>
    <string name="hgh_sucess_tianjia">添加完成</string>
    <string name="hgh_failed_tianjia">添加失败</string>
    <string name="hgh_sucess_tianjia1">银行卡添加成功</string>
    <string name="hgh_failed_tianjia1">银行卡添加失败</string>
    <string name="hgh_sucess_tianjia2">将自动返回至银行卡页面...  ...</string>
    <string name="hgh_sucess_tianjia24">将自动返回至提现页面...  ...</string>
    <string name="cardholder">持卡人</string>
    <string name="cardnumber">卡号</string>
    <string name="phonenumber">手机号</string>
    <string name="opening_bank">开户行</string>
    <string name="next_step">下一步</string>
    <string name="input_card_holder_name">请输入持卡人姓名</string>
    <string name="select_opening_bank">请选择开户行</string>
    <string name="input_card_number">请输入卡号</string>
    <string name="input_card_many_number">请输入提现金额</string>
    <string name="input_card_many_numberbig">您输入的提现金额超出了您的余额！</string>
    <string name="input_right_phone">请输入正确的手机号</string>
    <string name="add_bank_card_succeed">添加银行卡成功</string>
    <string name="add_bank_card_fail">已有绑定银行卡</string>
    <string name="pay_pwd">交易密码</string>
    <string name="pay_sure_pwd">确认密码</string>
    <string name="sure_pay_pwd">确认</string>
    <string name="set_pwd_ok">设置密码成功</string>
    <string name="set_pwd_fail">设置密码失败</string>
    <string name="bank_card">银行卡</string>
    <string name="bank_card_16">卡号最少16位</string>
    <string name="please_input_pwd1">请输入提现密码</string>
    <string name="please_input_sure_pwd">请输入确认密码</string>
    <string name="twice_input_pwd_not">两次输入的密码不一致</string>
    <string name="input_pwd_simple">输入的密码太过简单</string>
    <string name="payment_pwd_wrong">提现密码错误</string>
    <string name="payment_pwd_wrong_new">提现密码错误今天剩余</string>
    <string name="today_lock">今天已锁定，请明天再试</string>
    <string name="no_resuce">无数据</string>
    <string name="failed_resuce">金额输入错误</string>
    <string name="today_lockfive">今天剩余的次数已超过5次，已锁定，请明天再试</string>
    <string name="please_input_6_pwd">请输入6位提现密码</string>
    <string name="try_tommorrow">今天剩余的次数已超过5次，已锁定，请明天再试</string>
    <string name="please_input_remark">请输入备注</string>
    <string name="please_input_your_needs">请输入您的需求</string>
    <string name="withdrawal_amount_insufficient">可提现金额不足</string>
    <string name="please_input_money_right">请正确输入金额</string>
    <string name="already_binding_card">已绑定银行卡号</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="send_verfify_code">发送验证码</string>
    <string name="change_pwd">修改密码</string>
    <string name="new_payment_pwd">新交易密码</string>
    <string name="old_payment_pwd">原交易密码</string>
    <string name="ensure_new_payment_pwd">确认新密码</string>
    <string name="please_input_employee_name">请输入员工姓名</string>
    <string name="please_input_employee_phone">请输入员工手机号</string>
    <string name="please_input_employee_position">请输入员工职位</string>
    <string name="employee_number">员工编号</string>
    <string name="employee_name">员工姓名</string>
    <string name="employee_position">员工职位</string>
    <string name="save">保存</string>
    <string name="sms_already_send">验证码已发送</string>
    <string name="title_activity_ding_main">DingMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="searchtablenum">请输入桌位关键字</string>
    <string name="scanningqr">到店服务、服务呼叫、留言</string>
    <string name="keepqr">保存二维码</string>
    <string name="hello">个推开放平台Sdk演示程序</string>
    <string name="up">绑定sdk</string>
    <string name="down">解绑sdk</string>
    <string name="no_clientid">(none)</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="clear">清除日志</string>
    <string name="enablelog">开启debug日志</string>
    <string name="bindcell">绑定手机号</string>
    <string name="pmsg">透传测试</string>
    <string name="psmsg">通知栏测试</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="set_heartbeat">心跳间隔(s)</string>
    <string name="send_msg">发送消息</string>
    <string name="bind_alias">绑定别名</string>
    <string name="unbind_alias">解除别名绑定</string>
    <string name="retrievepassword">找回密码</string>
    <string name="registerimmediately">立即注册</string>
    <string name="totalaccount">账户总额 (元)</string>
    <string name="shopaccount">店铺今日收入 (元)</string>
    <string name="availablebalance">可用余额</string>
    <string name="takeinmoney">提现中金额</string>
    <string name="shopincometoday">店铺总额</string>
    <string name="initial">0.00</string>
    <string name="title_activity_leave_message">LeaveMessageActivity</string>
    <string name="reservationorder">预约订单</string>
    <string name="productlibrary">产品库</string>
    <string name="productclassification">产品分类</string>
    <string name="freezingamount">冻结金额</string>
    <string name="newaddcategory">添加会员分类</string>
    <string name="membercategoryhint">(注意:10-100,表示10,不含100,满足条件可自动升级，请慎重设置,如需修改请联系业务人员)</string>
    <string name="withdraw_failed_reason_1">审核未通过，请核对提现信息是否正确</string>
    <string name="withdraw_failed_reason_2">银行打款失败，请核对银行卡信息是否正确</string>
    <string name="today_left_money">今天剩余额度</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="dailyoperation">日常经营</string>
    <string name="shopalliance">商圈联盟</string>
    <string name="entertitle">请输入标题</string>
    <string name="entercontactnum">请输入联系方式</string>
    <string name="entersaysomething">要说点儿啥...</string>
    <string name="publish">发布</string>
    <string name="intelligentmanagement">智慧经营</string>
    <string name="businesscircle">商圈联营</string>
    <string name="underconstruction">正在建设中</string>
    <string name="currentnetworkisnotavailable">当前网络不可用，请检查网络</string>
    <string name="quicklogon">快速登陆</string>
    <string name="pleaseaddashop">请添加一个店铺</string>
    <string name="completetheloginnformation">店铺信息尚未完善，请补全信息</string>
    <string name="makesure">确定</string>
    <string name="activity_aboutus">关于我们</string>
    <string name="activity_functionintroduction">功能介绍</string>
    <string name="activity_addbankcard">添加银行卡</string>
    <string name="activity_addcontacts">新增联系人</string>
    <string name="activity_addclerk">新增店员</string>
    <string name="activity_memberadd">会员新增</string>
    <string name="activity_addnewmembers_details">会员详情</string>
    <string name="activity_addnewmembers_add">添加新会员</string>
    <string name="activity_addshop_add">新增商铺</string>
    <string name="activity_addshopinfo_add">完善店铺信息</string>
    <string name="activity_addtableset_add">添加桌位</string>
    <string name="activity_banklist_bankaccount">开户行</string>
    <string name="activity_bluetoothbase_sincesixstart">自Android 6.0开始需要打开位置权限才可以搜索到蓝牙设备</string>
    <string name="activity_bookfunction_bespoke">预约</string>
    <string name="activity_businessmarketing_title">商户营销</string>
    <string name="activity_callservice_title">呼叫服务</string>
    <string name="activity_callset_title">呼叫设置</string>
    <string name="activity_ahangepaymentpwd_title">修改密码</string>
    <string name="activity_changeshop_title">切换商铺</string>
    <string name="activity_chanpinck_title">产品仓库</string>
    <string name="activity_chanpinfb_title">产品发布</string>
    <string name="activity_chanpinguanli_title">产品管理</string>
    <string name="activity_choicedingdaninfoway_title">订单管理</string>
    <string name="activity_choosefromweixin_title">从微信商城产品库选择</string>
    <string name="timeselector_hestarttimemustbebeforetheendtime">开始日期须在结束日期之前！</string>
    <string name="timeselector_theendtimemustbeafterthestarttime">结束日期须在开始日期之后！</string>
    <string name="activity_connectgoods_title">联系货源</string>
    <string name="activity_consumptionsettlement_title">客户买单</string>
    <string name="activity_couponmanager_title">优惠券管理</string>
    <string name="activity_couponusingdetails_title">优惠券使用详情</string>
    <string name="activity_dailysgouru_title">上周每日收入</string>
</resources>