<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_8000"
    android:gravity="bottom"
    android:orientation="vertical" >

    <Button
        android:id="@+id/photoFromAlbum_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/fromPhotoAlbum"
        android:textColor="@color/color_c6c6c6" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/list_divider" />

    <Button
        android:id="@+id/photoFromCamera_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/fromCamera"
        android:textColor="@color/color_c6c6c6" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/list_divider" />

    <Button
        android:id="@+id/photoCancle_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/cancelBtn"
        android:textColor="@color/color_6bb4ff" />

</LinearLayout>