<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colores_news_14"
     >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/et_leaguespublishyell_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="left|center_vertical"
            android:hint="@string/entertitle"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:maxLength="10"
            android:textColorHint="@color/color_999999"
            android:textColor="@color/showcolor"/>
        <EditText
            android:id="@+id/et_leaguespublishyell_contactnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:hint="@string/entercontactnum"
            android:layout_marginTop="15dp"
            android:maxLength="11"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColorHint="@color/color_999999"
            android:textColor="@color/showcolor"/>
        <EditText
            android:id="@+id/et_leaguespublishyell_saysomething"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="left|top"
            android:maxLines="5"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:maxLength="150"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:hint="@string/entersaysomething"
            android:textColorHint="@color/color_999999"
            android:textColor="@color/showcolor"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_leaguespublishyell_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/color_3987fd"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:drawableRight="@mipmap/icon_publish"
        android:drawablePadding="5dp"
        android:text="@string/publish"
        android:textSize="@dimen/h16"
        android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>