<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colores_news_14"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_8e8e8e" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/new_payment_pwd"
        android:textColor="@color/color_8c8c8c"
        android:textSize="18sp" />

    <cn.com.hgh.gridpasswordview.GridPasswordView
        android:id="@+id/gridPasswordView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:background="@drawable/gridpassword_bg"
        app:lineColor="@color/colores_news_11"
        app:lineWidth="1dp"
        app:passwordLength="6"
        app:textColor="@color/black"
        app:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/ensure_new_payment_pwd"
        android:textColor="@color/color_8c8c8c"
        android:textSize="18sp" />

    <cn.com.hgh.gridpasswordview.GridPasswordView
        android:id="@+id/gpv_customUi_sure"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/gridpassword_bg"
        app:lineColor="@color/colores_news_11"
        app:lineWidth="1dp"
        app:passwordLength="6"
        app:textColor="@color/black"
        app:textSize="18sp" />

    <TextView
        android:id="@+id/txt_setting_payment_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_login"
        android:clickable="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/sure_pay_pwd"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>