<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colores_news_14"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="20dp" >

        <cn.com.hgh.view.CircularImageView
            android:id="@+id/civ_login_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/default_head" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/phone" />

            <EditText
                android:id="@+id/edit_login_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/telphone"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="15dp"
                android:textColor="@color/colores_news_11"
                android:textColorHint="@color/colores_news_11"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_marginLeft="45dp"
            android:background="@color/colores_news_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/lock" />

            <EditText
                android:id="@+id/edit_login_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/colores_news_11"
                android:textColorHint="@color/colores_news_11"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_login"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_login_retrieve_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:clickable="true"
            android:text="@string/registerimmediately"
            android:textColor="@color/colores_news_11"
            android:textSize="15sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null" />

        <TextView
            android:id="@+id/text_login_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="36dp"
            android:clickable="true"
            android:text="@string/forget_pwd"
            android:textColor="@color/colores_news_11"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>