<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="285dp"
              android:layout_height="160dp"
              android:layout_marginBottom="35dp"
              android:layout_marginLeft="20.5dp"
              android:layout_marginRight="20dp"
              android:background="@drawable/shape1"
              android:gravity="center_vertical"
              android:orientation="vertical"
              android:padding="14dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1."
            android:textSize="11sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_gz_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1%"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_dialoggz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_gz_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.1%;"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>
        <TextView
            android:id="@+id/tv_gz_bd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=";"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llt_dialoggz"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2."
            android:textSize="11sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counttime"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_Fdiscount_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_Ediscount_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialog_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3."
            android:textSize="11sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopNumAccount"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialog_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4."
            android:textSize="11sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopSYAccount"
            android:textColor="@color/colores_news_17"
            android:textSize="11sp"/>

    </LinearLayout>
</LinearLayout>